Fixed flex-box button wrapping

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1,h2,h3 {
     text-align: center;
     display: flex;
     justify-content: left;
+    flex-wrap: wrap;
 }
 
 .badge {
